# x4StationGenerator

./: .clang-format  CMakeLists.txt  README.md  issue.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  moduleselector.cpp  moduleselector.h  moduleselector.ui  stationsizewidget.h  valgrind.supp
assets/: module_arg_conn_base_02.json  module_arg_conn_base_03.json  module_arg_conn_vertical_02.json  module_arg_def_tube_01.json  module_arg_dock_m_01_hightech.json  module_arg_dock_tradestation_02.json  module_arg_hab_l_01.json  module_arg_hab_m_01.json  module_arg_hab_s_01.json  module_arg_pier_l_04.json  module_arg_prod_foodrations_01.json  module_arg_prod_medicalsupplies_01.json  module_arg_prod_spacefuel_01.json  module_arg_prod_wheat_01.json  module_arg_stor_container_l_01.json  module_arg_stor_container_m_01.json  module_arg_stor_liquid_s_01.json  module_arg_stor_solid_l_01.json  (+62 more)
src/: BuildSettings.cpp  (+8 more)
src/extractor/: .gitignore  CMakeLists.txt  CacheFile.cpp  Extractor.cpp  Extractor.hpp  ExtractorSettings.cpp  main.cpp  utils.cpp  utils.hpp
src/extractor/models/: modulegroups.cpp  modules.hpp  t.hpp  waregroups.cpp  waregroups.hpp  wares.cpp  wares.hpp
src/extractor/xsdfiles/: modulegroups.xsd  modules.xsd  t.xsd  waregroups.xsd  wares.xsd
src/libcommon/: CMakeLists.txt  ThreadPool.cpp  ThreadPool.hpp
src/libcommon/common/types/: Module.cpp  Module.hpp  Price.cpp  Price.hpp  StationSaveFile.cpp  StationSaveFile.hpp  Ware.cpp  Ware.hpp  Workforce.cpp  Workforce.hpp
src/libcommon/common/types/module/: Dock.cpp  Dock.hpp  Habitat.cpp  Habitat.hpp  Module.cpp  Module.hpp  ModuleWrapper.cpp  ModuleWrapper.hpp  Pierr.cpp  Pierr.hpp  ProductionModule.cpp  ProductionModule.hpp  Storage.cpp  Storage.hpp
src/libcommon/data/: Aggregate.cpp  Aggregate.hpp  Data.hpp  ID.h  Loader.cpp  Loader.hpp  Store.cpp  Store.hpp  WareModuleAndWorkforce.cpp  WareModuleAndWorkforce.hpp
src/libcommon/stationbuilder/: Complex.hpp  defines.cpp  defines.hpp
src/libcommon/stationbuilder/Generator/: ComplexGeneratorBase.cpp  ComplexGeneratorBase.hpp
src/libcommon/utils/: FmtVectorFormatter.hpp  WareTargetContainer.cpp  WareTargetContainer.hpp
src/libextractor/: CMakeLists.txt  Readme.md
src/libextractor/extractor/: CacheFile.cpp  CacheFile.hpp  Extractor.cpp  Extractor.hpp  ExtractorSettings.cpp  ExtractorSettings.hpp  LangFile.cpp  LangFile.hpp  Store.hpp  genmodels.sh  main.cpp  utils.cpp  utils.hpp
src/libextractor/extractor/databuilder/: AggregateStore.cpp  AggregateStore.hpp  DataBuilder.cpp  DataBuilder.hpp  Databuilder.cpp  Databuilder.hpp  ModuleAggregator.cpp  ModuleAggregator.hpp
src/libextractor/extractor/extraction_logic/: Archive.cpp  Archive.hpp  Extension.cpp  Extension.hpp  FileDetector.cpp  FileDetector.hpp  X4Extractable.cpp  X4Extractable.hpp
src/libextractor/extractor/models/: LangFile.cpp  LangFile.hpp  Structure.cpp  Structure.hpp  T.cpp  T.hpp  Waregroups.cpp  Waregroups.hpp  Wares.cpp  Wares.hpp  model_store.cpp  model_store.hpp  modulegroups.hpp  modules.cpp  t.cpp  wares.hpp
src/libextractor/extractor/patching_logic/: X4Patchable.cpp  X4Patchable.hpp
src/ui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/ui/section/: buildsummarysection.cpp  modulessection.hpp  ressourceproducedsection.cpp  ressourceproducedsection.hpp  settingssection.cpp  settingssection.hpp  settingssection.ui  wareselectionsection.cpp  wareselectionsection.h  wareselectionsection.ui
src/ui/section/DockAndPierrSection/: dockandpierrsection.cpp  dockandpierrsection.hpp  dockandpierrsection.ui
src/ui/section/DockAndPierrSection/widgets/: dockandpierrconfiguration.cpp  dockandpierrconfiguration.hpp  dockandpierrconfiguration.ui  dockandpierrconfigurationpanel.cpp  dockandpierrconfigurationpanel.hpp  dockandpierrconfigurationpanel.ui  dockandpierrselectionpanel.cpp  dockandpierrselectionpanel.hpp  dockandpierrselectionpanel.ui
src/ui/section/SettingsSection/: settingssection.cpp  settingssection.hpp  settingssection.ui
src/ui/section/StorageSelectionSection/: storagesection.cpp  storagesection.hpp  storagesection.ui
src/ui/section/SummarySection/: summarysection.cpp  summarysection.hpp  summarysection.ui
src/ui/section/SummarySection/widgets/: complexsummary.cpp  complexsummary.hpp  complexsummary.ui  modulesummary.cpp  modulesummary.hpp  modulesummary.ui  overviewsummary.cpp  overviewsummary.hpp  overviewsummary.ui  summaryitembase.cpp  summaryitembase.hpp  summaryitembase.ui  waresummary.cpp  waresummary.hpp  waresummary.ui
src/ui/section/WareSelectionSection/: wareselectionsection.cpp  wareselectionsection.h  wareselectionsection.ui
src/ui/section/WareSelectionSection/widgets/: wareconfigurator.cpp  wareconfigurator.hpp  wareconfigurator.ui  wareconfiguratorpanel.cpp  wareconfiguratorpanel.hpp  waresselector.cpp  waresselector.hpp  waresselector.ui
src/ui/utils/: MultiLayout.hpp  SortedLayout.cpp  SortedLayout.hpp  modules.cpp  modules.hpp  utils.cpp  utils.hpp
src/ui/widgets/: moduleconfiguration.cpp  moduleconfiguration.hpp  moduleconfiguration.ui  moduleconfigurationpanel.cpp  moduleconfigurationpanel.hpp  moduleconfigurationpanel.ui  moduleselectionpanel.cpp  moduleselectionpanel.hpp  moduleselectionpanel.ui  stationsizewidget.h  wareconfigurator.cpp  wareconfigurator.hpp  wareconfigurator.ui  wareconfiguratorpanel.cpp  wareconfiguratorpanel.hpp  wareconfiguratorpanel.ui  waresselector.cpp  waresselector.hpp  waresselector.ui
tools/dataextractor/: CMakeLists.txt  unpacker.sh
tools/dataextractor/src/: WareExtractor.cpp  WareExtractor.h  main.cpp
tools/regenerate_ware_and_modules/: .gitignore  main.py  models_in.py  models_out.py  pyproject.toml  unpacker.sh
tools/regenerate_ware_and_modules/loader/: extension.py  habitat.py  production.py  structure.py
tools/regenerate_ware_and_modules/models/: groups.py  habitats.py  models_out.py  modules.py  waregroups.py  wares.py
tools/regenerate_ware_and_modules/models/macros/: habitat.py  production.py  structure.py
tools/regenerate_ware_and_modules/utils/: data_types.py  lang.py
(+511 files in other folders)
