add_library(x4StationGeneratorCommon STATIC
        common/types/Price.cpp
        common/types/Price.hpp
        common/types/module/Module.hpp
        common/types/module/Module.cpp
        common/types/module/ProductionModule.cpp
        common/types/module/ProductionModule.hpp
        common/types/module/Habitat.cpp
        common/types/module/Habitat.hpp
        common/types/module/Dock.cpp
        common/types/module/Dock.hpp
        common/types/module/Pierr.cpp
        common/types/module/Pierr.hpp
        common/types/module/Storage.cpp
        common/types/module/Storage.hpp
        common/types/Ware.cpp
        common/types/Ware.hpp
        common/types/Workforce.cpp
        common/types/Workforce.hpp
        common/types/module/ModuleWrapper.cpp
        common/types/module/ModuleWrapper.hpp
        common/types/StationSaveFile.hpp
        common/types/StationSaveFile.cpp
        data/Aggregate.cpp
        data/Aggregate.hpp
        data/Loader.cpp
        data/Loader.hpp
        data/Store.cpp
        data/Store.hpp
        data/WareModuleAndWorkforce.cpp
        data/WareModuleAndWorkforce.hpp
        stationbuilder/Complex.hpp
        stationbuilder/defines.cpp
        stationbuilder/defines.hpp
        stationbuilder/Generator/ComplexGeneratorBase.cpp
        stationbuilder/Generator/ComplexGeneratorBase.hpp
        ThreadPool.cpp
        ThreadPool.hpp
        utils/FmtVectorFormatter.hpp
        utils/WareTargetContainer.cpp
        utils/WareTargetContainer.hpp
)
target_link_libraries(x4StationGeneratorCommon PRIVATE nlohmann_json spdlog::spdlog reflectcpp)
target_include_directories(x4StationGeneratorCommon PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})