[project]
name = "regenerate-ware-and-modules"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "loguru>=0.7.3",
    "pydantic>=2.11.7",
    "pydantic-xml>=2.17.3",
]

[dependency-groups]
dev = [
    "pyright>=1.1.403",
]
